--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: php
 php:
   - 5.6
-  - 7.2
-script: phpunit QueryGeneratorTest.php
+  - 7.4
+  - 8.0
+install: composer update
+script: vendor/bin/phpunit QueryGeneratorTest.php
