--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        php-version: ['5.6', '7.4', '8.3']
+        php-version: '8.3'
 
     steps:
       - name: Checkout code
