--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
       ]
    },
    "require-dev": {
-      "phpunit/phpunit": "^5 || ^9"
+      "phpunit/phpunit": "^5 || ^9",
+      "vimeo/psalm": "^5"
    }
 }
